force-app/main/default/objects/Dispatch__c/Dispatch__c.object-meta.xml
<CustomObject>
    <description>Dispatch records created by the daily batch load</description>
    <label>Dispatch</label>
    <nameField>
        <label>Dispatch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>