force-app/main/default/objects/Dispatch__c/fields/Actual_Date_for_End_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_for_End_of_Shipment__c</fullName>
    <label>Actual Date for End of Shipment</label>
    <type>Date</type>
</CustomField>