force-app/main/default/objects/Dispatch__c/fields/Actual_Loading_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Loading_End_Time__c</fullName>
    <label>Actual Loading End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>