force-app/main/default/objects/Dispatch__c/fields/Actual_Transport_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Transport_Start_Time__c</fullName>
    <label>Actual Transport Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>