force-app/main/default/objects/Dispatch__c/fields/Bottle__c.field-meta.xml
<CustomField>
    <fullName>Bottle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to Bottle Description</description>
    <label>Bottle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bottle__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>