force-app/main/default/objects/Dispatch__c/fields/Bottle_Description__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Description__c</fullName>
    <formula>Bottle__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bottle Description</label>
    <type>Text</type>
</CustomField>