force-app/main/default/objects/Dispatch__c/fields/Bottle_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Identifier__c</fullName>
    <formula>Bottle__r.Bottle_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bottle Identifier</label>
    <type>Text</type>
</CustomField>