force-app/main/default/objects/Dispatch__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <formula>AND(Collapsed__c, Delivery_Status__c == &apos;On Time&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>