force-app/main/default/objects/Dispatch__c/fields/Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Collapsed__c</fullName>
    <formula>Collapsed_Loads__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collapsed</label>
    <type>Checkbox</type>
</CustomField>