force-app/main/default/objects/Dispatch__c/fields/Collapsed_Loads__c.field-meta.xml
<CustomField>
    <fullName>Collapsed_Loads__c</fullName>
    <description>Number of collapsed loads for this dispatch (normally 0 or 1)</description>
    <label>Collapsed Loads</label>
    <summaryFilterItems>
        <field>Late_Load__c.Collapsed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>