force-app/main/default/objects/Dispatch__c/fields/Collapsed_State__c.field-meta.xml
<CustomField>
    <fullName>Collapsed_State__c</fullName>
    <formula>IF( Collapsed__c, &quot;Collapsed&quot;, &quot;Non-Collapsed&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collapsed State</label>
    <type>Text</type>
</CustomField>