force-app/main/default/objects/Dispatch__c/fields/Current_Date_of_Shipment_Completion__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_of_Shipment_Completion__c</fullName>
    <label>Current Date of Shipment Completion</label>
    <type>Date</type>
</CustomField>