force-app/main/default/objects/Dispatch__c/fields/Current_Month_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Delivery__c</fullName>
    <description>Is the month of the delivery date equal to yesterday&apos;s month of the year?</description>
    <formula>IF($Setup.Current_Month__c.Delivery_Month__c &gt; 0,
  AND(
    MONTH(DATEVALUE(Planned_Delivery_Date__c)) == $Setup.Current_Month__c.Delivery_Month__c,
    YEAR(DATEVALUE(Planned_Delivery_Date__c)) == $Setup.Current_Month__c.Year__c
  ),
  AND(
    MONTH(DATEVALUE(Planned_Delivery_Date__c)) == MONTH(TODAY()-1),
    YEAR(DATEVALUE(Planned_Delivery_Date__c)) == YEAR(TODAY()-1)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Delivery</label>
    <type>Checkbox</type>
</CustomField>