force-app/main/default/objects/Dispatch__c/fields/Current_Time_of_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Current_Time_of_Check_In__c</fullName>
    <label>Current Time of Check In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>