force-app/main/default/objects/Dispatch__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>The Encirc Account Number of the associated account</description>
    <formula>Customer__r.Encirc_Account_Number__c &amp; &quot;/&quot; &amp;  Customer__r.SAP_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>