force-app/main/default/objects/Dispatch__c/fields/Delivery_Month__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Month__c</fullName>
    <formula>TEXT(YEAR( DATEVALUE(Planned_Delivery_Date__c) )) &amp; &quot;-&quot; &amp; LPAD(TEXT( MONTH( DATEVALUE(Planned_Delivery_Date__c) )), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Month</label>
    <type>Text</type>
</CustomField>