force-app/main/default/objects/Dispatch__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <formula>CASE(Delivery_Status__c,
  &apos;On Time&apos;, IF(Collapsed__c, &apos;Collapsed&apos;, &apos;OTIF&apos;),
  &apos;Early&apos;, IF(Collapsed__c, &apos;Early &amp; Collapsed&apos;, &apos;Early&apos;),
  &apos;Late&apos;, IF(Collapsed__c, &apos;Late &amp; Collapsed&apos;, &apos;Late&apos;),
  &apos;OTIF&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery State</label>
    <type>Text</type>
</CustomField>