force-app/main/default/objects/Dispatch__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <formula>IF( Late_Loads__c &gt; 0, &apos;Late&apos;, 
  IF( Early_Loads__c &gt; 0, &apos;Early&apos;, &apos;On Time&apos; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Status</label>
    <type>Text</type>
</CustomField>