force-app/main/default/objects/Dispatch__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <description>Date of the dispatch</description>
    <label>Dispatch Date</label>
    <type>Date</type>
</CustomField>