force-app/main/default/objects/Dispatch__c/fields/Dispatch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date_Time__c</fullName>
    <description>Date and time of dispatch</description>
    <label>Dispatch Date/Time</label>
    <type>DateTime</type>
</CustomField>