force-app/main/default/objects/Dispatch__c/fields/Dispatch_ID__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_ID__c</fullName>
    <description>Semi-unique identifier of Dispatch; requires the addition of Pack Specification to make it unique</description>
    <externalId>true</externalId>
    <label>Dispatch ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>