force-app/main/default/objects/Dispatch__c/fields/Dispatch_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Name__c</fullName>
    <description>Globant Delivery Name from Dispatch staging  (NOTE: Label updated as Api name incorrectly named but can remain)</description>
    <label>Delivery Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>