force-app/main/default/objects/Dispatch__c/fields/Dispatch_Staging_Record__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Staging_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch Staging Record</label>
    <referenceTo>Dispatch_Staging__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>