force-app/main/default/objects/Dispatch__c/fields/Dispatch_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Time__c</fullName>
    <label>Dispatch Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>