force-app/main/default/objects/Dispatch__c/fields/Early_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Delivery_Date__c</fullName>
    <description>Expected Delivery Date as determined by the earliest Early Load</description>
    <inlineHelpText>Expected Delivery Date as determined by the earliest Early Load</inlineHelpText>
    <label>Early Delivery Date</label>
    <summarizedField>Late_Load__c.New_Delivery_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Late_Load__c.Status__c</field>
        <operation>equals</operation>
        <value>Early</value>
    </summaryFilterItems>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>