force-app/main/default/objects/Dispatch__c/fields/Early_Late_Collapsed_Loads__c.field-meta.xml
<CustomField>
    <fullName>Early_Late_Collapsed_Loads__c</fullName>
    <description>Early, Late or Collapsed Loads for this Dispatch</description>
    <inlineHelpText>Early, Late or Collapsed Loads for this Dispatch</inlineHelpText>
    <label>Number of Early/Late/Collapsed Loads</label>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>