force-app/main/default/objects/Dispatch__c/fields/Early_Loads__c.field-meta.xml
<CustomField>
    <fullName>Early_Loads__c</fullName>
    <description>Number of early deliveries for this dispatch (normally 0 or 1)</description>
    <inlineHelpText>Number of early deliveries for this dispatch (normally 0 or 1)</inlineHelpText>
    <label>Early Loads</label>
    <summaryFilterItems>
        <field>Late_Load__c.Status__c</field>
        <operation>equals</operation>
        <value>Early</value>
    </summaryFilterItems>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>