force-app/main/default/objects/Dispatch__c/fields/Early_or_Late_Loads__c.field-meta.xml
<CustomField>
    <fullName>Early_or_Late_Loads__c</fullName>
    <formula>Early_Loads__c +  Late_Loads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early or Late Loads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>