force-app/main/default/objects/Dispatch__c/fields/Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time__c</fullName>
    <label>Entry Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>