force-app/main/default/objects/Dispatch__c/fields/Exclude_from_OTIF__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_OTIF__c</fullName>
    <formula>Haulier__r.Exclude_from_OTIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from OTIF</label>
    <type>Checkbox</type>
</CustomField>