force-app/main/default/objects/Dispatch__c/fields/First_Monday_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Monday_of_Month__c</fullName>
    <formula>Month__r.First_Monday_of_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Monday of Month</label>
    <type>Date</type>
</CustomField>