force-app/main/default/objects/Dispatch__c/fields/First_Monday_of_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Monday_of_Year__c</fullName>
    <description>Date of first Monday of year (could be in previous year)</description>
    <formula>Month__r.First_Monday_of_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Monday of Year</label>
    <type>Date</type>
</CustomField>