force-app/main/default/objects/Dispatch__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <description>Delivery forecast by account, month and product</description>
    <label>Forecast</label>
    <referenceTo>Forecast__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>