force-app/main/default/objects/Dispatch__c/fields/Haulier__c.field-meta.xml
<CustomField>
    <fullName>Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Haulier Name</description>
    <label>Haulier</label>
    <referenceTo>Haulier__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>