force-app/main/default/objects/Dispatch__c/fields/Haulier_Code__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Code__c</fullName>
    <formula>Haulier__r.Haulier_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Haulier Code</label>
    <type>Text</type>
</CustomField>