force-app/main/default/objects/Dispatch__c/fields/Haulier_Name__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Name__c</fullName>
    <formula>Haulier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Haulier Name</label>
    <type>Text</type>
</CustomField>