force-app/main/default/objects/Dispatch__c/fields/Is_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Month__c</fullName>
    <formula>Month__r.Is_Last_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Month?</label>
    <type>Checkbox</type>
</CustomField>