force-app/main/default/objects/Dispatch__c/fields/Last_48_Hour_Collapse__c.field-meta.xml
<CustomField>
    <fullName>Last_48_Hour_Collapse__c</fullName>
    <formula>AND( Collapsed__c, NOW() - Planned_Delivery_Date__c &lt; 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 48 Hour Collapse</label>
    <type>Checkbox</type>
</CustomField>