force-app/main/default/objects/Dispatch__c/fields/Last_48_Hour_Late_Early_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Last_48_Hour_Late_Early_Delivery__c</fullName>
    <formula>IF(Delivery_Status__c == &quot;Late&quot;, 
  NOW() - Late_Delivery_Date__c &lt; 2,
  IF(Delivery_Status__c == &quot;Early&quot;, NOW() - Early_Delivery_Date__c &lt; 2, false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 48 Hour Late/Early Delivery</label>
    <type>Checkbox</type>
</CustomField>