force-app/main/default/objects/Dispatch__c/fields/Late_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Late_Delivery_Date__c</fullName>
    <description>Expected Delivery Date as determined by the latest Late Load</description>
    <inlineHelpText>Expected Delivery Date as determined by the latest Late Load</inlineHelpText>
    <label>Late Delivery Date</label>
    <summarizedField>Late_Load__c.New_Delivery_Date__c</summarizedField>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>