force-app/main/default/objects/Dispatch__c/fields/Late_Loads__c.field-meta.xml
<CustomField>
    <fullName>Late_Loads__c</fullName>
    <description>Number of times delivery was delayed</description>
    <inlineHelpText>Number of times delivery was delayed</inlineHelpText>
    <label>Late Loads</label>
    <summaryFilterItems>
        <field>Late_Load__c.Status__c</field>
        <operation>equals</operation>
        <value>Late</value>
    </summaryFilterItems>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>