force-app/main/default/objects/Dispatch__c/fields/Load_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Load_Job_Id__c</fullName>
    <description>The Job Id of the batch Apex run which created or last updated this record</description>
    <label>Load Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>