force-app/main/default/objects/Dispatch__c/fields/Material_Document_Year__c.field-meta.xml
<CustomField>
    <fullName>Material_Document_Year__c</fullName>
    <label>Material Document Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>