force-app/main/default/objects/Dispatch__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup relationship to the month of the forecast/budget</description>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipLabel>Dispatches</relationshipLabel>
    <relationshipName>Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>