force-app/main/default/objects/Dispatch__c/fields/Number_of_Material_Document__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Material_Document__c</fullName>
    <label>Number of Material Document</label>
    <length>10</length>
    <type>Text</type>
</CustomField>