force-app/main/default/objects/Dispatch__c/fields/On_Time_Loads__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Loads__c</fullName>
    <description>Load delivered on time and in full:  1 or 0</description>
    <formula>IF(AND(Delivery_Status__c == &quot;On Time&quot;, NOT(Collapsed__c)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTIF Loads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>