force-app/main/default/objects/Dispatch__c/fields/Pallets_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Pallets_Damaged__c</fullName>
    <label>Pallets Damaged</label>
    <summarizedField>Late_Load__c.Pallets_damaged__c</summarizedField>
    <summaryFilterItems>
        <field>Late_Load__c.Collapsed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Late_Load__c.Dispatch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>