force-app/main/default/objects/Dispatch__c/fields/Planned_Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Check_In_Time__c</fullName>
    <label>Planned Check In Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>