force-app/main/default/objects/Dispatch__c/fields/Planned_Date_for_Shipment_Completion__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_for_Shipment_Completion__c</fullName>
    <label>Planned Date for Shipment Completion</label>
    <type>Date</type>
</CustomField>