force-app/main/default/objects/Dispatch__c/fields/Planned_Date_for_Start_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_for_Start_of_Loading__c</fullName>
    <label>Planned Date for Start of Loading</label>
    <type>Date</type>
</CustomField>