force-app/main/default/objects/Dispatch__c/fields/Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_Date__c</fullName>
    <label>Planned Delivery Date</label>
    <type>DateTime</type>
</CustomField>