force-app/main/default/objects/Dispatch__c/fields/Planned_Loading_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Loading_End_Time__c</fullName>
    <label>Planned Loading End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>