force-app/main/default/objects/Dispatch__c/fields/Planned_Transport_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Transport_End_Time__c</fullName>
    <label>Planned Transport End Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>