force-app/main/default/objects/Dispatch__c/fields/Product_Pack__c.field-meta.xml
<CustomField>
    <fullName>Product_Pack__c</fullName>
    <formula>Bottle_Description__c + &quot;/&quot; +  Pack_Specification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product/Pack</label>
    <type>Text</type>
</CustomField>