force-app/main/default/objects/Dispatch__c/fields/Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document__c</fullName>
    <label>Sales Document</label>
    <length>10</length>
    <type>Text</type>
</CustomField>