force-app/main/default/objects/Dispatch__c/fields/Sales_Organization_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_Formula__c</fullName>
    <formula>TEXT(Month__r.Sales_Organization__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organization</label>
    <type>Text</type>
</CustomField>