force-app/main/default/objects/Dispatch__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <description>ID code of Site</description>
    <label>Site ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>