force-app/main/default/objects/Dispatch__c/fields/Staging_Id__c.field-meta.xml
<CustomField>
    <fullName>Staging_Id__c</fullName>
    <description>The Salesforce Id of the staging record which generated or last updated this record</description>
    <label>Staging ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>