force-app/main/default/objects/Dispatch__c/fields/Time_of_Transportation_Processing__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Transportation_Processing__c</fullName>
    <label>Time of Transportation Processing</label>
    <length>8</length>
    <type>Text</type>
</CustomField>