force-app/main/default/objects/Dispatch__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <description>Weight of dispatch in tonnes</description>
    <inlineHelpText>Weight of dispatch in tonnes</inlineHelpText>
    <label>Tonnage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>