force-app/main/default/objects/Dispatch__c/fields/Trailer_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Plate_Number__c</fullName>
    <label>Trailer Plate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>