force-app/main/default/objects/Dispatch__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <description>Unique combination of Dispatch ID and Pack Specification</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>