force-app/main/default/objects/Dispatch__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Quantity of units in thousands</description>
    <inlineHelpText>Quantity of units in Thousands</inlineHelpText>
    <label>Units</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>