force-app/main/default/objects/Dispatch__c/fields/Units_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Units_Rounded__c</fullName>
    <formula>ROUND(Units__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>