force-app/main/default/objects/Dispatch__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>Week of year, which may start in the previous year</description>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>